// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vault card should match snapshot of active vault 1`] = `
<View
  style={
    Object {
      "marginBottom": 8,
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderBottomColor": "rgba(204, 204, 204, 1)",
        "borderBottomWidth": 0,
        "borderLeftColor": "rgba(204, 204, 204, 1)",
        "borderLeftWidth": 0,
        "borderRightColor": "rgba(204, 204, 204, 1)",
        "borderRightWidth": 0,
        "borderTopColor": "rgba(204, 204, 204, 1)",
        "borderTopWidth": 0,
        "opacity": 1,
      }
    }
    testID="vault_"
  >
    <View
      style={
        Object {
          "flexDirection": "column",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderBottomLeftRadius": 10,
              "borderBottomRightRadius": 10,
              "borderBottomWidth": 0,
              "borderLeftWidth": 0,
              "borderRightWidth": 0,
              "borderTopLeftRadius": 10,
              "borderTopRightRadius": 10,
              "borderTopWidth": 0,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingBottom": 20,
              "paddingLeft": 20,
              "paddingRight": 20,
              "paddingTop": 20,
            },
            Object {
              "backgroundColor": "rgba(255, 255, 255, 1)",
            },
          ]
        }
        testID="vault"
      >
        <View
          style={
            Object {
              "flexBasis": "0%",
              "flexDirection": "column",
              "flexGrow": 1,
              "flexShrink": 1,
              "paddingRight": 8,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "display": "flex",
                  "flexDirection": "row",
                  "position": "relative",
                },
                Object {
                  "right": 0,
                },
              ]
            }
          />
          <View
            style={
              Object {
                "marginTop": 12,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "RegularFont",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Array [
                    Object {
                      "fontFamily": "SoraRegular",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 16,
                    },
                    Object {
                      "color": "rgba(89, 89, 89, 1)",
                    },
                  ],
                ]
              }
              testID="vault_max_loan_label"
            >
              Max loan amount
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "RegularFont",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Array [
                    Object {
                      "fontFamily": "SoraRegular",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 16,
                    },
                    Object {
                      "color": "rgba(18, 18, 18, 1)",
                    },
                  ],
                ]
              }
              testID="vault_max_loan_amount"
            >
              $0.00
            </Text>
          </View>
          <View
            style={
              Object {
                "marginTop": 8,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "RegularFont",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Array [
                    Object {
                      "fontFamily": "SoraRegular",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 16,
                    },
                    Object {
                      "color": "rgba(89, 89, 89, 1)",
                    },
                  ],
                ]
              }
              testID="vault_total_collateral_label"
            >
              Total collateral
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "RegularFont",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Array [
                    Object {
                      "fontFamily": "SoraRegular",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 16,
                    },
                    Object {
                      "color": "rgba(18, 18, 18, 1)",
                    },
                  ],
                ]
              }
              testID="vault_total_collateral_amount"
            />
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "column",
              "flexWrap": "wrap",
            }
          }
        >
          <react-native-circular-progress-indicator/mock
            activeStrokeColor="rgba(229, 69, 69, 1)"
            activeStrokeWidth={3}
            clockwise={false}
            inActiveStrokeColor="rgba(242, 242, 242, 1)"
            inActiveStrokeWidth={3}
            maxValue={1}
            radius={58}
            showProgressValue={false}
            value={0.01}
          />
          <View
            style={
              Array [
                Object {
                  "height": "100%",
                  "position": "absolute",
                },
                Object {
                  "maxHeight": 116,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "justifyContent": "flex-end",
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                ellipsizeMode="middle"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "fontFamily": "RegularFont",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 24,
                    },
                    Array [
                      Array [
                        Object {
                          "fontFamily": "SoraRegular",
                          "fontSize": 12,
                          "fontWeight": "400",
                          "lineHeight": 16,
                          "paddingLeft": 8,
                          "paddingRight": 8,
                        },
                        Object {
                          "maxWidth": 124,
                          "minWidth": 10,
                        },
                      ],
                      Object {
                        "color": "rgba(89, 89, 89, 1)",
                      },
                    ],
                  ]
                }
                testID="vault_vault_id"
              >
                22ffasd5ca123123123123123121231061
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "RegularFont",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 24,
                    },
                    Array [
                      Object {
                        "fontFamily": "SoraSemiBold",
                        "fontSize": 16,
                        "fontWeight": "600",
                        "lineHeight": 24,
                        "textAlign": "center",
                      },
                      Object {
                        "color": "rgba(229, 69, 69, 1)",
                      },
                    ],
                  ]
                }
                testID="vault_min_ratio"
              >
                0.00%
              </Text>
            </View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "rgba(0, 0, 0, 1)",
                  "borderBottomLeftRadius": 9999,
                  "borderBottomRightRadius": 9999,
                  "borderBottomWidth": 0,
                  "borderLeftWidth": 0,
                  "borderRightWidth": 0,
                  "borderTopLeftRadius": 9999,
                  "borderTopRightRadius": 9999,
                  "borderTopWidth": 0,
                  "flexWrap": "wrap",
                  "marginTop": 8,
                  "opacity": 1,
                  "paddingBottom": 8,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 8,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "RegularFont",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 24,
                    },
                    Array [
                      Object {
                        "alignSelf": "center",
                        "flexWrap": "wrap",
                        "fontFamily": "SoraSemiBold",
                        "fontSize": 12,
                        "fontWeight": "600",
                        "lineHeight": 16,
                      },
                      Object {
                        "color": "rgba(242, 242, 242, 1)",
                      },
                    ],
                  ]
                }
                testID="vault_borrow_button"
              >
                Borrow
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Vault card should match snapshot of at-risk vault 1`] = `
<View
  style={
    Object {
      "marginBottom": 8,
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderBottomColor": "rgba(204, 204, 204, 1)",
        "borderBottomWidth": 0,
        "borderLeftColor": "rgba(204, 204, 204, 1)",
        "borderLeftWidth": 0,
        "borderRightColor": "rgba(204, 204, 204, 1)",
        "borderRightWidth": 0,
        "borderTopColor": "rgba(204, 204, 204, 1)",
        "borderTopWidth": 0,
        "opacity": 1,
      }
    }
    testID="vault_"
  >
    <View
      style={
        Object {
          "flexDirection": "column",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderBottomLeftRadius": 10,
              "borderBottomRightRadius": 10,
              "borderBottomWidth": 0,
              "borderLeftWidth": 0,
              "borderRightWidth": 0,
              "borderTopLeftRadius": 10,
              "borderTopRightRadius": 10,
              "borderTopWidth": 0,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingBottom": 20,
              "paddingLeft": 20,
              "paddingRight": 20,
              "paddingTop": 20,
            },
            Object {
              "backgroundColor": "rgba(255, 255, 255, 1)",
            },
          ]
        }
        testID="vault"
      >
        <View
          style={
            Object {
              "flexBasis": "0%",
              "flexDirection": "column",
              "flexGrow": 1,
              "flexShrink": 1,
              "paddingRight": 8,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "display": "flex",
                  "flexDirection": "row",
                  "position": "relative",
                },
                Object {
                  "right": 0,
                },
              ]
            }
          />
          <View
            style={
              Object {
                "marginTop": 12,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "RegularFont",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Array [
                    Object {
                      "fontFamily": "SoraRegular",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 16,
                    },
                    Object {
                      "color": "rgba(89, 89, 89, 1)",
                    },
                  ],
                ]
              }
              testID="vault_max_loan_label"
            >
              Max loan amount
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "RegularFont",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Array [
                    Object {
                      "fontFamily": "SoraRegular",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 16,
                    },
                    Object {
                      "color": "rgba(18, 18, 18, 1)",
                    },
                  ],
                ]
              }
              testID="vault_max_loan_amount"
            >
              $0.00
            </Text>
          </View>
          <View
            style={
              Object {
                "marginTop": 8,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "RegularFont",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Array [
                    Object {
                      "fontFamily": "SoraRegular",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 16,
                    },
                    Object {
                      "color": "rgba(89, 89, 89, 1)",
                    },
                  ],
                ]
              }
              testID="vault_total_collateral_label"
            >
              Total collateral
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "RegularFont",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Array [
                    Object {
                      "fontFamily": "SoraRegular",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 16,
                    },
                    Object {
                      "color": "rgba(18, 18, 18, 1)",
                    },
                  ],
                ]
              }
              testID="vault_total_collateral_amount"
            />
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "column",
              "flexWrap": "wrap",
            }
          }
        >
          <react-native-circular-progress-indicator/mock
            activeStrokeColor="rgba(229, 69, 69, 1)"
            activeStrokeWidth={3}
            clockwise={false}
            inActiveStrokeColor="rgba(242, 242, 242, 1)"
            inActiveStrokeWidth={3}
            maxValue={1}
            radius={58}
            showProgressValue={false}
            value={0.01}
          />
          <View
            style={
              Array [
                Object {
                  "height": "100%",
                  "position": "absolute",
                },
                Object {
                  "maxHeight": 116,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "justifyContent": "flex-end",
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                ellipsizeMode="middle"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "fontFamily": "RegularFont",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 24,
                    },
                    Array [
                      Array [
                        Object {
                          "fontFamily": "SoraRegular",
                          "fontSize": 12,
                          "fontWeight": "400",
                          "lineHeight": 16,
                          "paddingLeft": 8,
                          "paddingRight": 8,
                        },
                        Object {
                          "maxWidth": 124,
                          "minWidth": 10,
                        },
                      ],
                      Object {
                        "color": "rgba(89, 89, 89, 1)",
                      },
                    ],
                  ]
                }
                testID="vault_vault_id"
              >
                22ffasd5ca123123123123123121231061
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "RegularFont",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 24,
                    },
                    Array [
                      Object {
                        "fontFamily": "SoraSemiBold",
                        "fontSize": 16,
                        "fontWeight": "600",
                        "lineHeight": 24,
                        "textAlign": "center",
                      },
                      Object {
                        "color": "rgba(229, 69, 69, 1)",
                      },
                    ],
                  ]
                }
                testID="vault_min_ratio"
              >
                0.00%
              </Text>
            </View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "rgba(0, 0, 0, 1)",
                  "borderBottomLeftRadius": 9999,
                  "borderBottomRightRadius": 9999,
                  "borderBottomWidth": 0,
                  "borderLeftWidth": 0,
                  "borderRightWidth": 0,
                  "borderTopLeftRadius": 9999,
                  "borderTopRightRadius": 9999,
                  "borderTopWidth": 0,
                  "flexWrap": "wrap",
                  "marginTop": 8,
                  "opacity": 1,
                  "paddingBottom": 8,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 8,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "RegularFont",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 24,
                    },
                    Array [
                      Object {
                        "alignSelf": "center",
                        "flexWrap": "wrap",
                        "fontFamily": "SoraSemiBold",
                        "fontSize": 12,
                        "fontWeight": "600",
                        "lineHeight": 16,
                      },
                      Object {
                        "color": "rgba(242, 242, 242, 1)",
                      },
                    ],
                  ]
                }
                testID="vault_borrow_button"
              >
                Borrow
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Vault card should match snapshot of healthy vault 1`] = `
<View
  style={
    Object {
      "marginBottom": 8,
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderBottomColor": "rgba(204, 204, 204, 1)",
        "borderBottomWidth": 0,
        "borderLeftColor": "rgba(204, 204, 204, 1)",
        "borderLeftWidth": 0,
        "borderRightColor": "rgba(204, 204, 204, 1)",
        "borderRightWidth": 0,
        "borderTopColor": "rgba(204, 204, 204, 1)",
        "borderTopWidth": 0,
        "opacity": 1,
      }
    }
    testID="vault_"
  >
    <View
      style={
        Object {
          "flexDirection": "column",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderBottomLeftRadius": 10,
              "borderBottomRightRadius": 10,
              "borderBottomWidth": 0,
              "borderLeftWidth": 0,
              "borderRightWidth": 0,
              "borderTopLeftRadius": 10,
              "borderTopRightRadius": 10,
              "borderTopWidth": 0,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingBottom": 20,
              "paddingLeft": 20,
              "paddingRight": 20,
              "paddingTop": 20,
            },
            Object {
              "backgroundColor": "rgba(255, 255, 255, 1)",
            },
          ]
        }
        testID="vault"
      >
        <View
          style={
            Object {
              "flexBasis": "0%",
              "flexDirection": "column",
              "flexGrow": 1,
              "flexShrink": 1,
              "paddingRight": 8,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "display": "flex",
                  "flexDirection": "row",
                  "position": "relative",
                },
                Object {
                  "right": 0,
                },
              ]
            }
          />
          <View
            style={
              Object {
                "marginTop": 12,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "RegularFont",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Array [
                    Object {
                      "fontFamily": "SoraRegular",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 16,
                    },
                    Object {
                      "color": "rgba(89, 89, 89, 1)",
                    },
                  ],
                ]
              }
              testID="vault_max_loan_label"
            >
              Max loan amount
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "RegularFont",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Array [
                    Object {
                      "fontFamily": "SoraRegular",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 16,
                    },
                    Object {
                      "color": "rgba(18, 18, 18, 1)",
                    },
                  ],
                ]
              }
              testID="vault_max_loan_amount"
            >
              $0.00
            </Text>
          </View>
          <View
            style={
              Object {
                "marginTop": 8,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "RegularFont",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Array [
                    Object {
                      "fontFamily": "SoraRegular",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 16,
                    },
                    Object {
                      "color": "rgba(89, 89, 89, 1)",
                    },
                  ],
                ]
              }
              testID="vault_total_collateral_label"
            >
              Total collateral
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "RegularFont",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Array [
                    Object {
                      "fontFamily": "SoraRegular",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 16,
                    },
                    Object {
                      "color": "rgba(18, 18, 18, 1)",
                    },
                  ],
                ]
              }
              testID="vault_total_collateral_amount"
            />
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "column",
              "flexWrap": "wrap",
            }
          }
        >
          <react-native-circular-progress-indicator/mock
            activeStrokeColor="rgba(229, 69, 69, 1)"
            activeStrokeWidth={3}
            clockwise={false}
            inActiveStrokeColor="rgba(242, 242, 242, 1)"
            inActiveStrokeWidth={3}
            maxValue={1}
            radius={58}
            showProgressValue={false}
            value={0.01}
          />
          <View
            style={
              Array [
                Object {
                  "height": "100%",
                  "position": "absolute",
                },
                Object {
                  "maxHeight": 116,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "justifyContent": "flex-end",
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                ellipsizeMode="middle"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "fontFamily": "RegularFont",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 24,
                    },
                    Array [
                      Array [
                        Object {
                          "fontFamily": "SoraRegular",
                          "fontSize": 12,
                          "fontWeight": "400",
                          "lineHeight": 16,
                          "paddingLeft": 8,
                          "paddingRight": 8,
                        },
                        Object {
                          "maxWidth": 124,
                          "minWidth": 10,
                        },
                      ],
                      Object {
                        "color": "rgba(89, 89, 89, 1)",
                      },
                    ],
                  ]
                }
                testID="vault_vault_id"
              >
                22ffasd5ca123123123123123121231061
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "RegularFont",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 24,
                    },
                    Array [
                      Object {
                        "fontFamily": "SoraSemiBold",
                        "fontSize": 16,
                        "fontWeight": "600",
                        "lineHeight": 24,
                        "textAlign": "center",
                      },
                      Object {
                        "color": "rgba(229, 69, 69, 1)",
                      },
                    ],
                  ]
                }
                testID="vault_min_ratio"
              >
                0.00%
              </Text>
            </View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "rgba(0, 0, 0, 1)",
                  "borderBottomLeftRadius": 9999,
                  "borderBottomRightRadius": 9999,
                  "borderBottomWidth": 0,
                  "borderLeftWidth": 0,
                  "borderRightWidth": 0,
                  "borderTopLeftRadius": 9999,
                  "borderTopRightRadius": 9999,
                  "borderTopWidth": 0,
                  "flexWrap": "wrap",
                  "marginTop": 8,
                  "opacity": 1,
                  "paddingBottom": 8,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 8,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "RegularFont",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 24,
                    },
                    Array [
                      Object {
                        "alignSelf": "center",
                        "flexWrap": "wrap",
                        "fontFamily": "SoraSemiBold",
                        "fontSize": 12,
                        "fontWeight": "600",
                        "lineHeight": 16,
                      },
                      Object {
                        "color": "rgba(242, 242, 242, 1)",
                      },
                    ],
                  ]
                }
                testID="vault_borrow_button"
              >
                Borrow
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Vault card should match snapshot of liquidated vault 1`] = `
<View
  style={
    Object {
      "marginBottom": 8,
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderBottomColor": "rgba(204, 204, 204, 1)",
        "borderBottomWidth": 0,
        "borderLeftColor": "rgba(204, 204, 204, 1)",
        "borderLeftWidth": 0,
        "borderRightColor": "rgba(204, 204, 204, 1)",
        "borderRightWidth": 0,
        "borderTopColor": "rgba(204, 204, 204, 1)",
        "borderTopWidth": 0,
        "opacity": 1,
      }
    }
    testID="vault_IN LIQUIDATION"
  >
    <View
      style={
        Array [
          Object {
            "borderBottomLeftRadius": 10,
            "borderBottomRightRadius": 10,
            "borderBottomWidth": 0,
            "borderLeftWidth": 0,
            "borderRightWidth": 0,
            "borderTopLeftRadius": 10,
            "borderTopRightRadius": 10,
            "borderTopWidth": 0,
            "paddingBottom": 20,
            "paddingLeft": 20,
            "paddingRight": 20,
            "paddingTop": 20,
          },
          Object {
            "backgroundColor": "rgba(255, 255, 255, 1)",
          },
        ]
      }
      testID="vault_IN LIQUIDATION_vault"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Image
          resizeMode="contain"
          source={1}
          style={
            Object {
              "height": 64,
              "width": 74,
            }
          }
          testID="vault_IN LIQUIDATION_liquidated_vault_image"
        />
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "flexBasis": "0%",
              "flexDirection": "column",
              "flexGrow": 1,
              "flexShrink": 1,
            }
          }
        >
          <View
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "borderBottomColor": "rgba(204, 204, 204, 1)",
                "borderBottomWidth": 0,
                "borderLeftColor": "rgba(204, 204, 204, 1)",
                "borderLeftWidth": 0,
                "borderRightColor": "rgba(204, 204, 204, 1)",
                "borderRightWidth": 0,
                "borderTopColor": "rgba(204, 204, 204, 1)",
                "borderTopWidth": 0,
                "flexDirection": "row",
                "opacity": 1,
              }
            }
          >
            <Text
              ellipsizeMode="middle"
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "fontFamily": "RegularFont",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Array [
                    Array [
                      Object {
                        "fontSize": 12,
                        "lineHeight": 16,
                        "textAlign": "right",
                      },
                      Object {
                        "maxWidth": 124,
                        "minWidth": 10,
                      },
                    ],
                    Object {
                      "color": "rgba(89, 89, 89, 1)",
                    },
                  ],
                ]
              }
              testID="vault_IN LIQUIDATION_vault_id"
            >
              22ffasd5ca123123123123123121231061
            </Text>
            <Text />
          </View>
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "RegularFont",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
                Array [
                  Object {
                    "fontFamily": "SoraRegular",
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 16,
                    "marginTop": 4,
                    "textAlign": "right",
                    "width": "91.666667%",
                  },
                  Object {
                    "color": "rgba(229, 69, 69, 1)",
                  },
                ],
              ]
            }
            testID="vault_IN LIQUIDATION_vault_description"
          >
            Liquidated vault
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
